test/bad/automatic/extension/class/compile_time/0022.lat
class andrzej {
  int andrzej;

  void jolanta() {
    self = new andrzej;
  }
}

int main() {
  andrzej janusz = new andrzej;
  return janusz.andrzej;
}
